// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a blank button 1`] = `
<styled.button
  onClick={[Function]}
/>
`;

exports[`Button renders a button with text 1`] = `
<styled.button
  onClick={[Function]}
>
  Test
</styled.button>
`;
